# corrective_self_reflective_rag

./: .dockerignore  .ebignore  .gitignore  AWS_Deployment.md  AWS_Deployment_Architecture.md  Dockerfile  Dockerrun.aws.json  README.md  build_and_push_image.sh  deployment.md  pyproject.toml
.ebextensions/: storage.config
.github/workflows/: deploy.yml
.platform/nginx/conf.d/: timeout.conf
app/api/: upload.py
workflows/: aws_eb_deployment.md
